Containerisation + Migration to SpringBoot 3 + formatting